--- a/PMS/Views/AddTaskWindow.xaml
+++ b/PMS/Views/AddTaskWindow.xaml
@@ -34,15 +34,13 @@
         </StackPanel>
 
         <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
-            <Button Content="Anuluj"
-                    Width="80"
-                    Margin="0,0,10,0"
-                    IsCancel="True"/>
 
             <Button Content="Zatwierdź"
-                    Width="80"
-                    IsDefault="True"
-                    Click="Confirm_Click"/>
+              Width="80"
+              Margin="0,0,10,0"
+              Command="{Binding ConfirmCommand}"
+              IsDefault="True" />
+
         </StackPanel>
     </Grid>
 </Window>
