--- a/PMS/Views/MainWindow.xaml
+++ b/PMS/Views/MainWindow.xaml
@@ -2,9 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:vm="clr-namespace:PMS.ViewModels"
-        Title="Task Manager"
-        Height="500"
-        Width="800">
+        Title="Task Manager" Height="500" Width="800">
 
     <Window.DataContext>
         <vm:TaskViewModel/>
@@ -20,11 +18,11 @@
 
         <!-- 1) Przycisk Dodaj -->
         <Button Content="Dodaj"
+            Command="{Binding ShowAddDialogCommand}"
             Grid.Row="0"
             HorizontalAlignment="Left"
             Width="100"
-            Margin="0,0,0,5"
-            Click="AddTask_Click"/>
+            Margin="0,0,0,5"/>
 
         <!-- 2) Nagłówki kolumn -->
         <Grid Grid.Row="1" Margin="0,0,0,5">
