--- a/PMS.UI/Views/AddTaskWindow.xaml
+++ b/PMS.UI/Views/AddTaskWindow.xaml
@@ -2,18 +2,18 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:vm="clr-namespace:PMS.Presentation.ViewModels;assembly=PMS.Presentation"
-        Title="Dodaj/Zedytuj Zadanie"
-        Height="360" Width="400"
+        Title="Zadanie"
+        Height="420" Width="400"
         WindowStartupLocation="CenterOwner">
 
-
-    <!-- Styl globalny: pokaż Tooltip z błędem i czerwone obramowanie -->
     <Window.Resources>
         <Style TargetType="Control">
             <Style.Triggers>
                 <Trigger Property="Validation.HasError" Value="True">
                     <Setter Property="ToolTip"
-                  Value="{Binding (Validation.Errors)[0].ErrorContent, RelativeSource={RelativeSource Self}}"/>
+                  Value="{Binding (Validation.Errors)[0].ErrorContent,
+                          RelativeSource={RelativeSource Self}}"/>
+                    <Setter Property="BorderBrush" Value="Red"/>
                 </Trigger>
             </Style.Triggers>
         </Style>
@@ -28,22 +28,28 @@
 
         <StackPanel>
             <TextBlock Text="Tytuł:"/>
-            <TextBox
-        Text="{Binding Title,
-               UpdateSourceTrigger=PropertyChanged,
-               ValidatesOnDataErrors=True,
-               NotifyOnValidationError=True}"/>
+            <TextBox Text="{Binding Title,
+                              UpdateSourceTrigger=PropertyChanged,
+                              ValidatesOnDataErrors=True,
+                              NotifyOnValidationError=True}"/>
 
             <TextBlock Text="Opis:" Margin="0,10,0,0"/>
             <TextBox Text="{Binding Description, UpdateSourceTrigger=PropertyChanged}"
                AcceptsReturn="True" Height="60"/>
 
-            <TextBlock Text="Termin:" Margin="0,10,0,0"/>
-            <DatePicker
-        SelectedDate="{Binding DueDate,
-                        UpdateSourceTrigger=PropertyChanged,
-                        ValidatesOnDataErrors=True,
-                        NotifyOnValidationError=True}"/>
+            <!-- Data rozpoczęcia -->
+            <TextBlock Text="Data rozpoczęcia:" Margin="0,10,0,0"/>
+            <DatePicker SelectedDate="{Binding StartDate,
+                                        UpdateSourceTrigger=PropertyChanged,
+                                        ValidatesOnDataErrors=True,
+                                        NotifyOnValidationError=True}"/>
+
+            <!-- Termin zakończenia -->
+            <TextBlock Text="Termin zakończenia:" Margin="0,10,0,0"/>
+            <DatePicker SelectedDate="{Binding Deadline,
+                                        UpdateSourceTrigger=PropertyChanged,
+                                        ValidatesOnDataErrors=True,
+                                        NotifyOnValidationError=True}"/>
 
             <TextBlock Text="Status:" Margin="0,10,0,0"/>
             <ComboBox ItemsSource="{Binding AllStates}"
