--- a/PMS.UI/Views/MainWindow.xaml
+++ b/PMS.UI/Views/MainWindow.xaml
@@ -1,8 +1,10 @@
-﻿<Window 
+﻿<Window
     x:Class="PMS.UI.Views.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    Title="Task Manager" Height="500" Width="800">
+    Title="Task Manager"
+    Height="500"
+    Width="800">
 
     <Grid Margin="10">
         <Grid.RowDefinitions>
@@ -11,7 +13,7 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <!-- Przycisk Dodaj -->
+        <!-- Dodaj -->
         <Button Grid.Row="0"
             Content="Dodaj"
             Command="{Binding AddCommand}"
@@ -19,21 +21,29 @@
             HorizontalAlignment="Left"
             Margin="0,0,0,5"/>
 
-        <!-- Nagłówki kolumn -->
+        <!-- Nagłówki -->
         <Grid Grid.Row="1" Margin="0,0,0,5">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="1.5*"/>
+                <!-- Tytuł -->
                 <ColumnDefinition Width=".5*"/>
+                <!-- Start -->
                 <ColumnDefinition Width=".5*"/>
+                <!-- Deadline -->
                 <ColumnDefinition Width=".5*"/>
+                <!-- Status -->
                 <ColumnDefinition Width=".5*"/>
+                <!-- Priorytet -->
+                <ColumnDefinition Width=".5*"/>
+                <!-- Akcje -->
             </Grid.ColumnDefinitions>
 
             <TextBlock Grid.Column="0" Text="Tytuł" FontWeight="Bold" Margin="10,0,10,0"/>
-            <TextBlock Grid.Column="1" Text="Termin" FontWeight="Bold" HorizontalAlignment="Center" Margin="0,0,10,0"/>
-            <TextBlock Grid.Column="2" Text="Status" FontWeight="Bold" HorizontalAlignment="Center" Margin="0,0,10,0"/>
-            <TextBlock Grid.Column="3" Text="Priorytet" FontWeight="Bold" HorizontalAlignment="Center" Margin="0,0,10,0"/>
-            <TextBlock Grid.Column="4" Text="Akcje" FontWeight="Bold" HorizontalAlignment="Center" Margin="0,0,10,0"/>
+            <TextBlock Grid.Column="1" Text="Start" FontWeight="Bold" HorizontalAlignment="Center" Margin="0,0,10,0"/>
+            <TextBlock Grid.Column="2" Text="Termin" FontWeight="Bold" HorizontalAlignment="Center" Margin="0,0,10,0"/>
+            <TextBlock Grid.Column="3" Text="Status" FontWeight="Bold" HorizontalAlignment="Center" Margin="0,0,10,0"/>
+            <TextBlock Grid.Column="4" Text="Priorytet" FontWeight="Bold" HorizontalAlignment="Center" Margin="0,0,10,0"/>
+            <TextBlock Grid.Column="5" Text="Akcje" FontWeight="Bold" HorizontalAlignment="Center" Margin="0,0,10,0"/>
         </Grid>
 
         <!-- Lista zadań -->
@@ -53,6 +63,7 @@
                                     <ColumnDefinition Width=".5*"/>
                                     <ColumnDefinition Width=".5*"/>
                                     <ColumnDefinition Width=".5*"/>
+                                    <ColumnDefinition Width=".5*"/>
                                 </Grid.ColumnDefinitions>
 
                                 <!-- Tytuł -->
@@ -61,47 +72,50 @@
                            VerticalAlignment="Center"
                            Margin="0,0,10,0"/>
 
-                                <!-- Termin -->
+                                <!-- StartDate -->
                                 <TextBlock Grid.Column="1"
-                           Text="{Binding DueDate, StringFormat={}{0:dd.MM.yyyy}}"
+                           Text="{Binding StartDate, StringFormat={}{0:dd.MM.yyyy}}"
+                           VerticalAlignment="Center"
+                           HorizontalAlignment="Center"/>
+
+                                <!-- Deadline -->
+                                <TextBlock Grid.Column="2"
+                           Text="{Binding Deadline, StringFormat={}{0:dd.MM.yyyy}}"
                            VerticalAlignment="Center"
                            HorizontalAlignment="Center"/>
 
                                 <!-- Status -->
-                                <ComboBox Grid.Column="2"
+                                <ComboBox Grid.Column="3"
                           ItemsSource="{Binding AllStates}"
                           SelectedItem="{Binding State, Mode=TwoWay}"
                           HorizontalContentAlignment="Center"
                           HorizontalAlignment="Stretch"/>
 
                                 <!-- Priorytet -->
-                                <ComboBox Grid.Column="3"
+                                <ComboBox Grid.Column="4"
                           ItemsSource="{Binding AllPriorities}"
                           SelectedItem="{Binding Priority, Mode=TwoWay}"
                           HorizontalContentAlignment="Center"
                           HorizontalAlignment="Stretch"/>
 
                                 <!-- Edytuj / Usuń -->
-                                <Grid Grid.Column="4">
+                                <Grid Grid.Column="5">
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="*"/>
                                         <ColumnDefinition Width="*"/>
                                     </Grid.ColumnDefinitions>
-
                                     <Button Grid.Column="0"
                           Content="Edytuj"
                           Command="{Binding EditCommand}"
                           ToolTip="Edytuj zadanie"
                           HorizontalAlignment="Stretch"
                           Margin="0,0,1,0"/>
-
                                     <Button Grid.Column="1"
                           Content="Usuń"
                           Command="{Binding DeleteCommand}"
                           ToolTip="Usuń zadanie"
                           HorizontalAlignment="Stretch"/>
                                 </Grid>
-
                             </Grid>
                         </Border>
                     </DataTemplate>
